# ddd-user-registration-practice

./: README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: lint-format.yml  pytest.yml  run_app.yml
db/: users.db
src/: app.py
src/base/application/users/: base_service_execute.py
src/base/domein/entities/: base_iuser_factory.py
src/base/infrastructure/repositories/: iuser_repository.py
src/core/error/: request_error.py  user_exist_error.py
src/core/logger/: logger.py
src/core/trunsaction/: trunsaction.py
src/custom/application/users/: __init__.py  user_delete_service.py  user_register_service.py  user_update_service.py
src/custom/domein/entities/: user.py  user_factory.py
src/custom/domein/services/: user_service.py
src/custom/domein/value_objects/: user_id.py  user_name.py
src/custom/infrastructure/repositories/: in_memory_user_repository.py  user_repository.py
src/custom/interfaces/cli/: main.py
test/: test_sample.py
test/integration/: test_user_delete.py  test_user_registration.py  test_user_update.py
test/unit/: test_user.py
