[tool.poetry]
name = "ddd-user-registration-practice"
version = "0.1.0"
description = ""
authors = ["KoseiN38 <kooose0308@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
